wrapped content with main to fix left and right margins

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -189,10 +189,3 @@
   }
 }
 
-body {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 80ch;
-  padding: 1rem;
-  line-height: 1.5;
-}
